# cmake-gtest

./: CMakeLists.txt  README.md
src/: main.cpp
tests/: CMakeLists.txt  add_test.cpp  hello_test.cpp
